**  denotes quite substantial/important changes
*** denotes really big changes 

1.7-27

* Further multi-threading in gam fits - final two leading order matrix
  operations parallelized using openMP. 

1.7-26

* Namespace fixes.

1.7-25

* code added to allow openMP based multi-threading in gam fits (see
  ?gam.control and ?"mgcv-parallel"). 

* bam now allows AR1 error model to be split blockwise. See argument 
  'AR.start'.

* magic.post.proc made more efficient (one of two O(np^2) steps removed).

* var.summary now coerces character to factor. 

* bugs fixed whereby etastart etc were not passed to initial.spg and
  get.null.coefs. Thanks to Gavin Simpson.

* reformulate removed from predict.gam to avoid (slow) repeated parser 
  calls.

* gaussian(link="log") initialization fixed so that negative data 
  does not make it fail, via fix.family patching function.

* bug fix in plot method for "fs" basis - ignored any side conditions.
  Thanks to Martijn Weiling and Jacolien van Rij.

* gamm now checks whether smooths nested in factors have illegal side 
  conditions, and halts if so (re-ordering formula can help).
 
* anova.glmlist no longer called.

* Compiled code now uses R_chck_calloc and R_chk_free for memory management
  to avoid the possibility of unfriendly exit on running out of memory. 

* fix in gam.side which would fail with unpenalized interactions in the 
  presence of main effects. 

1.7-24

* Examples pruned in negbin, smooth.construct.ad.smooth.spec and bam help 
  files to reduce CRAN checking load.

* gam.side now warns if only repeated 1-D smooths of the same variable are
  encountered, but does not halt.

* Bug fix in C code for "cr" basis, that could cause a memory violation during
  prediction, when an extrapolation was immediately followed by a prediction 
  that lay exactly on the upper boundary knot. Thanks to Keith Woolner for 
  reporting this.

* Fix for bug in fast REML code that could cause bam to fail with ti/te only